# SEAL

./: CMakeLists.txt  README.md  keywords.json
helper_scripts/: 00_patch_collector.py  10_linux_compile.py  11_call_graph.py  20_indirect_parser.py  30_spec_gen.py  31_run_analyzer.py  40_log_parser.py  50_bug_detector.py  60_time_analysis.py  config.py  utils.py
include/: ConditionNode.h  CustomChecker.h  DriverSpecs.h  EnhancedSEG.h  GraphDiffer.h  NodeHelper.h  PatchParser.h  SEGPatchDiff.h  SensitiveOps.h  SpecParser.h  UtilsHelper.h  ValueHelper.h
src/: CMakeLists.txt  ConditionNode.cpp  EnhancedSEG.cpp  GraphDiffer.cpp  NodeHelper.cpp  PatchParser.cpp  SEGPatchDiff.cpp  SensitiveOps.cpp  SpecParser.cpp  UtilsHelper.cpp  ValueHelper.cpp
